--- a/test/fixtures/workshops.yml
+++ b/test/fixtures/workshops.yml
@@ -1,15 +1,1 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-  email: MyString
-  address: MyString
-  contact: MyString
-  com_reg_num: MyString
-
-two:
-  name: MyString
-  email: MyString
-  address: MyString
-  contact: MyString
-  com_reg_num: MyString
+# empty
